--- a/terraform/modules/private registry/page.html
+++ b/terraform/modules/private registry/page.html
@@ -6,6 +6,8 @@
 </head><body>Terraform Cloud allows users to create and confidentially <span style="background-color: #ffff00">share infrastructure modules within an organization using the private registry.</span><br/>
 &nbsp;<span style="color: #ff0000">With Terraform Enterprise, the private registry allows you to share modules within or across organizations &nbsp;<br/>
 </span><span style="color: #ff0000"><br/>
+</span><span style="color: #ff0000">P.S.: </span>The registry uses <span style="background-color: #ffff99">tags to identify module versions</span>. Release tag names must be a semantic version, which can optionally be prefixed with a v . For example, v1. 0.4 and 0.9. &nbsp;<span style="color: #ff0000"><br/>
+</span><span style="color: #ff0000"><br/>
 </span><img src="image.png" /><br/>
 <br/>
 terraform {<br/>
