--- a/terraform/knowledgeflow pt8 - modules/page.html
+++ b/terraform/knowledgeflow pt8 - modules/page.html
@@ -3,12 +3,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>KnowledgeFlow pt8 - Modules</title>
-</head><body><b><span style="font-size: 13pt"><span style="color: #0000ff">Minimal module structure</span></span></b><br/>
+</head><body><b><span style="color: #0000ff"><span style="font-size: 13pt">Minimal module structure</span></span></b><br/>
 A typical module should contain the following files:<br/>
-<ul><li><b><span style="font-size: 12pt"><span style="color: #0000ff">main.tf</span></span></b>: Contains the core resource declarations and configurations for the module.</li>
-<li><b><span style="font-size: 12pt"><span style="color: #0000ff">variables.tf</span></span></b>: Defines input variables that allow users to customize the module's behavior.</li>
-<li><b><span style="font-size: 12pt"><span style="color: #0000ff">outputs.tf</span></span></b>: Specifies output values that the module returns to the caller, providing information about the created resources.</li>
-<li><span style="font-size: 12pt"><b><span style="color: #0000ff">README.md</span></b></span>: Offers documentation on how to use the module, including descriptions of input variables and outputs.</li>
+<ul><li><span style="color: #0000ff"><span style="font-size: 12pt"><b>main.tf</b></span></span>: Contains the core resource declarations and configurations for the module.</li>
+<li><span style="color: #0000ff"><span style="font-size: 12pt"><b>variables.tf</b></span></span>: Defines input variables that allow users to customize the module's behavior.</li>
+<li><span style="color: #0000ff"><span style="font-size: 12pt"><b>outputs.tf</b></span></span>: Specifies output values that the module returns to the caller, providing information about the created resources.</li>
+<li><span style="color: #0000ff"><b><span style="font-size: 12pt">README.md</span></b></span>: Offers documentation on how to use the module, including descriptions of input variables and outputs.</li>
 </ul>
 <br/>
 What I also like to do, when I’m building modules, is to create examples for those modules.<br/>
@@ -16,7 +16,7 @@ So in each module, what I typically do, is create an examples folder in which I 
 For the Readme file, I usually leverage <a href="https://terraform-docs.io">terraform-docs</a>&nbsp;to get the documentation automated, but nevertheless, I also explain what the module does, how to leverage the examples and deep dive into why I took some decisions related to the code.<br/>
 &nbsp;<br/>
 <br/>
-<b><span style="font-size: 12pt"><span style="color: #0000ff">Module Example</span></span></b><br/>
+<span style="color: #0000ff"><span style="font-size: 12pt"><b>Module Example</b></span></span><br/>
 Let’s create a simple module for generating config maps in Kubernetes.<br/>
 &nbsp; <img src="image.png" /><img src="image 2.png" /><br/>
 <img src="image 3.png" /><br/>
@@ -33,4 +33,14 @@ In order to build reusable Terraform modules that can be easily leveraged to ach
 <li><b>Optional: </b>Use <i>pre-commit</i></li>
 </ul>
 &nbsp;<br/>
+When using modules installed from a module registry, we recommend explicitly constraining the acceptable version numbers to avoid unexpected or unwanted changes.<br/>
+<br/>
+Use the version argument in the module block to specify versions:<br/>
+<br/>
+module "consul" {<br/>
+&nbsp; source &nbsp;= "hashicorp/consul/aws"<br/>
+<span style="background-color: #ffff00">&nbsp; version = "0.0.5"</span><br/>
+<br/>
+&nbsp; servers = 3<br/>
+}<br/>
 </body></html>
