--- a/terraform/things interesting/page.html
+++ b/terraform/things interesting/page.html
@@ -21,15 +21,15 @@ The primary responsibilities of Terraform Core are:<ul><li>Infrastructure as cod
 Terraform Plugins<br/>
 Terraform Plugins are written in Go and are executable binaries invoked by Terraform Core over RPC. Each plugin exposes an implementation for a specific service, such as AWS, or provisioner, such as bash. All Providers and Provisioners used in Terraform configurations are plugins. They are executed as a separate process and communicate with the main Terraform binary over an RPC interface. Terraform has several Provisioners built-in, while Providers are discovered dynamically as needed (See <b>Discovery</b>&nbsp;below). Terraform Core provides a high-level framework that abstracts away the details of plugin discovery and RPC communication so developers do not need to manage either.<br/>
 &nbsp; <br/>
-<span style="font-size: 18pt"><span style="color: #0000ff"><br/>
-</span></span><span style="font-size: 18pt"><span style="color: #0000ff">Providers aliases</span></span><br/>
+<span style="color: #0000ff"><span style="font-size: 18pt"><br/>
+</span></span><span style="color: #0000ff"><span style="font-size: 18pt">Providers aliases</span></span><br/>
 <img src="image 4.png" /><img src="image 5.png" /><br/>
 <img src="image 6.png" /><br/>
 <br/>
 Notice that instead of installing the latest version of the AWS provider that conforms with the configured version constraints, Terraform installed the version specified in the lock file. While initializing your workspace, Terraform read the dependency lock file and downloaded the specified versions of the AWS and random providers.<br/>
 If Terraform did not find a lock file, it would download the latest versions of the providers that fulfill the version constraints you defined in the required_providers block<br/>
 <br/>
-By default, Terraform will attempt to download the provider version specified by the lock file (.terraform.lock.hcl). If the lock file does not exist, Terraform will use the required_providers block to determine the provider version. If neither exists, Terraform will download the latest provider version. &nbsp;<br/>
+<span style="background-color: #00ff00">By default, Terraform will attempt to download the provider version specified by the lock file (.terraform.lock.hcl).</span><span style="background-color: #ffa300">&nbsp;If the lock file does not exist, Terraform will use the required_providers block to determine the provider version. If neither exists, Terraform will download the latest provider version.</span>&nbsp; <br/>
 &nbsp; <br/>
 <br/>
 &nbsp;<br/>
