--- a/terraform/vault provider/page.html
+++ b/terraform/vault provider/page.html
@@ -5,4 +5,7 @@
 <title>Vault Provider</title>
 </head><body>Hashicorp vault Manage Secrets &amp; Protect Sensitive Data &nbsp;Secure, store and tightly control access to tokens, passwords, certificates, encryption keys for protecting secrets and other sensitive data using a UI, CLI, or HTTP API. &nbsp;<br/>
 <br/>
-The Vault provider <b>allows Terraform to read from, write to, and configure HashiCorp Vault</b>. Important. Interacting with Vault from Terraform causes any secrets that you read and write to be persisted in both Terraform's state file and in any generated plan files. &nbsp;</body></html>
+The Vault provider <b>allows Terraform to read from, write to, and configure HashiCorp Vault</b>. Important. Interacting with Vault from Terraform causes any secrets that you read and write to be persisted in both Terraform's state file and in any generated plan files. &nbsp;<br/>
+\<br/>
+<span style="background-color: #ffff00"><span style="font-size: 13pt"><br/>
+We can use providers to supply variable values (vault for example) &nbsp;</span></span></body></html>
